[package]
name = "hyper-content-encoding"
version = "0.1.1"
description = "A small utility to handle content encoding with hyper"
license = "MIT"
keywords = ["http", "hyper", "content-encoding", "compression"]
edition = "2021"

[dependencies]
bytes = "1.6.0"
flate2 = "1.0.30"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4.13"


[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

